Drop Java 8 support (#364)
* Drop Java 8 support

* Drop Java 8 support

* fail-fast: false

* fix tests

* fix tests

* Try fix OOM in CI

* Rollback doobie update

* Update sbt Docker image

* Try fix OOM

* Try fix OOM

* Try fix OOM

* Fix test