@@ -23,9 +23,6 @@ export CASSANDRA_DC=datacenter1
 export ORIENTDB_HOST=127.0.0.1
 export ORIENTDB_PORT=12424
 
-export GC_OPTS="-XX:ReservedCodeCacheSize=256m -XX:+TieredCompilation -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled"
-export JVM_OPTS="-Dcommunity=false -Dquill.macro.log=false -Xms1024m -Xmx4g -Xss5m ${GC_OPTS}"
-
 modules=$1
 
 echo "Modules: $modules"
@@ -168,8 +165,6 @@ function base_build() {
 }
 
 function sqltest_build() {
-    # Can use more memory here since not loading any images
-    export JVM_OPTS="-Dcommunity=false -Dquill.macro.log=false -Xms2g -Xmx5g -Xss5m ${GC_OPTS}"
     sbt -Dmodules=sqltest -Doracle=true $SBT_ARGS test
 }
 
@@ -179,12 +174,6 @@ function db_build() {
     echo "=== Building Tests ==="
     ./build/aware_run.sh "sbt -Dmodules=db $SBT_ARGS test"
 }
-
-# function js_build() {
-#     show_mem
-#     export JVM_OPTS="-Dquill.macro.log=false -Xms1024m -Xmx4g -Xss5m ${GC_OPTS}"
-#     sbt -Dmodules=js $SBT_ARGS test
-# }
 
 function async_build() {
     wait_for_mysql_postgres
